[project]
name = "memory-test-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.12",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "openai>=2.29.0",
    "python-dotenv>=1.2.2",
    "langchain-community>=0.4.1",
    "pymilvus>=2.6.10",
    "dashscope>=1.20.0",
]
